[tool.poetry]
name = "influxbenchmarker"
version = "0.1.0"
description = "Benchmarks influx"
authors = ["Lars Quentin <lars.quentin@gwdg.de>"]
homepage = "https://github.com/gwdg/InfluxBenchmarker"
repository = "https://github.com/gwdg/InfluxBenchmarker"
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
