[tool.poetry]
name = "influxbenchmarker"
version = "0.1.0"
description = "Benchmarks influx"
authors = ["Lars Quentin <lars.quentin@gwdg.de>"]
homepage = "https://github.com/gwdg/InfluxBenchmarker"
repository = "https://github.com/gwdg/InfluxBenchmarker"
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
influxdb = "^5.3.1"

[tool.poetry.dev-dependencies]
flake8 = "^5.0.4"
flake8-bugbear = "^22.10.27"
pep8-naming = "^0.13.2"
flake8-builtins = "^2.0.1"
flake8-comprehensions = "^3.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
